[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Simon Meoni <simonmeoni@aol.com>"]
description = "a containerized llama model"
license = "apache-2.0"
name = "llama"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~3.10"
pyllama = "^0.0.9"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
torch = "^1.13.1"
transformers = "^4.27.3"
